# cpp-iot-simulator

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  logs.txt  main.cpp
.cmake/api/v1/reply/: cache-v2-0ceea25964b6169341b1.json  cmakeFiles-v1-76a20220739bcefdf297.json  codemodel-v2-cdf9b96a09ce1d585d45.json  index-2026-01-19T04-58-02-0123.json  target-simulator-3b3b3341f3be89adf544.json  toolchains-v1-0f3cb66e8278adfebe13.json
include/: protocol.hh  ring_buffer.hh
